--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,39 @@
   <title>Portfolio</title>
 </head>
 <body>
-
+    <header>
+        <div id="logo">
+          <img src="img/logo_sample.png" alt="logo">
+        </div>
+        <div id="title">
+            <p>Jiaji's Personal Website</p>
+          </div>
+        <div id="header_background">
+          <img src="" alt="">
+        </div>
+        <div id="nav">
+          <a href="about.html">About</a>
+          <a href="contact.html">Contact</a>
+          <a href="portfolio.html">Portfolio</a>
+          <a href="resume.html">Resume</a>
+        </div>
+      </header>
+      <main>
+        <p>My protfolio!</p>
+      </main>
+      <aside>
+        <a href="">
+          <img src="img/aside_sample_1.png" alt="aside_nav_1">
+        </a>
+        <a href="">
+          <img src="img/aside_sample_2.png" alt="aside_nav_2">
+        </a>
+        <a href="">
+          <img src="img/aside_sample_3.png" alt="aside_nav_3">
+        </a>
+      </aside>
+      <footer>
+        <p>&copy; Jiaji's website 2019</p>
+      </footer>
 </body>
 </html>
