--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Jiaji's Personal Website</title>
+  <link rel="stylesheet" href="css/stylesheet.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
+  </style>
 </head>
 <body>
   <header>
@@ -16,10 +20,18 @@
       <img src="" alt="">
     </div>
     <div id="nav">
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="resume.html">Resume</a>
+      <div>
+        <a href="about.html">About</a>
+      </div>
+      <div>
+        <a href="contact.html">Contact</a>
+      </div>
+      <div>
+        <a href="portfolio.html">Portfolio</a>
+      </div>
+        <a href="resume.html">Resume</a>
+      <div>
+      </div>
     </div>
   </header>
   <main>
@@ -29,15 +41,21 @@
     <p>I love playing piano. I started to practice piano since I was 10. When I was in high school, I created a band with my friends. After that, I turned to play popular music, including some basic composition and piano accompaniment.</p>
   </main>
   <aside>
-    <a href="">
-      <img src="img/aside_sample_1.png" alt="aside_nav_1">
-    </a>
-    <a href="">
-      <img src="img/aside_sample_2.png" alt="aside_nav_2">
-    </a>
-    <a href="">
-      <img src="img/aside_sample_3.png" alt="aside_nav_3">
-    </a>
+    <div>
+      <a href="">
+        <img src="img/aside_sample_1.png" alt="aside_nav_1">
+      </a>
+    </div>
+    <div>
+      <a href="">
+        <img src="img/aside_sample_2.png" alt="aside_nav_2">
+      </a>
+    </div>
+    <div>
+      <a href="">
+       <img src="img/aside_sample_3.png" alt="aside_nav_3">
+      </a>
+    </div>
   </aside>
   <footer>
     <p>&copy; Jiaji's website 2019</p>
