Add: about, porftolio, and resume

--- a/resume.html
+++ b/resume.html
@@ -3,30 +3,112 @@
 <head>
   <meta charset="UTF-8">
   <title>Downloading resume</title>
+  <link rel="stylesheet" href="css/stylesheet.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
+  </style>
 </head>
 <body>
   <header>
     <div id="logo">
-      <img src="img/logo_sample.png" alt="logo">
+      <a href="index.html"><img src="img/logo_sample.png" alt="logo"></a>
     </div>
     <div id="title">
       <p>Jiaji's Personal Website</p>
     </div>
-    <div id="header_background">
-      <img src="" alt="">
-    </div>
     <div id="nav">
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="resume.html">Resume</a>
+      <div>
+        <a href="about.html">About</a>
+      </div>
+      <div>
+        <a href="contact.html">Contact</a>
+      </div>
+      <div>
+        <a href="portfolio.html">Portfolio</a>
+      </div>
+      <div>
+        <a href="resume.html">Resume</a>
+      </div>
     </div>
   </header>
   <main>
-    <p>Hello! My name is Jiaji Li, an international student from Drexel University. I come from China. My major is entertainment and art management, and digital media concentration. I finished my co-op last year and my task was basically managing official accounts on social media for a company, which helps students to apply for top universities.</p>
-    <p>Currently, I am planning to apply for graduate schools in economics. Because I found that it is an interesting topic for me, and it also has a good future. My area is combining digital media and economics. As a digital native, I believe that these two things are playing significant roles in our world.</p>
-    <p>I am a big fan of video games. I enjoy playing games and communicating with other players. My favourite game is Dark Soul.</p>
-    <p>I love playing piano. I started to practice piano since I was 10. When I was in high school, I created a band with my friends. After that, I turned to play popular music, including some basic composition and piano accompaniment.</p>
+   <div id="name">
+      <p>Jiaji Li</p>
+   </div>
+   <div>
+      <ul>
+        <li>3516 Spring Garden Street</li>
+        <li>Philadelphia, PA 19104</li>
+        <li>215-385-6215</li>
+        <li>jl3623@drexel.edu</li>
+      </ul>
+   </div>
+   <div>
+     <p>Education</p>
+     <ul>
+       <li>Drexel University, Philadelphia, PA </li>
+       <li>Bachelor of Science in Entertainment & Art Management, Anticipated Graduation June 2020 </li>
+       <li>Digital Media Concentration </li>
+     </ul>
+   </div>
+   <div>
+     <p>Award</p>
+     <ul>
+       <li>Certificate of Merit in Career Management & Professional Development, Drexel University, 2017</li>
+     </ul>
+   </div>
+   <div>
+     <p>Relevant Coursework</p>
+     <ul>
+       <li>Overview of Digital Media</li>
+       <li>Web Development </li>
+       <li>Digital Design Tool</li>
+       <li>Business Law</li>
+       <li>Economics</li>
+       <li>Electronic Publishing</li>
+     </ul>
+   </div>
+   <div>
+     <p>Skills</p>
+     <ul>
+       <li>Adobe Illustrator</li>
+       <li>Adobe Photoshop</li>
+       <li>Paint Tool SAI</li>
+     </ul>
+   </div>
+   <div>
+     <p>Relevant Experience</p>
+     <ul>
+        <li>Drexel Communication Bridge Program, International Student Assistant, September 2015 - June 2016
+          <ul>
+            <li>Participated in many multiple cultures communication activities</li>
+            <li>Motivated international students to connect to the new community</li>
+            <li>Provided a platform of cultural communication for local members</li>
+          </ul>
+        </li>
+        <li>Drexel Chinese Student & Scholar Association, Entertainment Department Assistant, September 2015 - September 2016
+          <ul>
+            <li>Participated activities in Entertainment Department</li>
+            <li>Devoted to hold Spring Festival Party and other activities</li>
+            <li>Facilitated communication with Chinese students community</li>
+          </ul>
+        </li>
+        <li>The magazine project called Spectrum in design course, Producer, October 2016 - December 2016
+            <ul>
+              <li>Designed a digital magazine by using Adobe InDesign</li>
+              <li>Utilized software skills such as Adobe Photoshop and Illustrator</li>
+              <li>Created an ideal effect as a sample for class</li>
+            </ul>
+          </li>
+     </ul>
+   </div>
+   <div>
+     <p>Activities</p>
+     <ul>
+       <li>Hobbies: piano, basic music composition, Chinese character handwriting, anime style drawing</li>
+       <li>Other activities: Taught piano for children, designed a logo for a E-sport team</li>
+     </ul>
+   </div>
   </main>
   <aside>
     <a href="">
