--- a/about.html
+++ b/about.html
@@ -2,42 +2,60 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About Me</title>
+  <title>Jiaji's Personal Website</title>
+  <link rel="stylesheet" href="css/stylesheet.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
+  </style>
 </head>
 <body>
   <header>
     <div id="logo">
-      <img src="img/logo_sample.png" alt="logo">
+      <a href="index.html"><img src="img/logo_sample.png" alt="logo"></a>
     </div>
     <div id="title">
       <p>Jiaji's Personal Website</p>
     </div>
-      <div id="header_background">
-        <img src="" alt="">
-    </div>
-     <div id="nav">
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="resume.html">Resume</a>
+    <div id="nav">
+      <div>
+        <a href="about.html">About</a>
+      </div>
+      <div>
+        <a href="contact.html">Contact</a>
+      </div>
+      <div>
+        <a href="portfolio.html">Portfolio</a>
+      </div>
+      <div>
+        <a href="resume.html">Resume</a>
+      </div>
     </div>
   </header>
   <main>
-      <p>Hello! My name is Jiaji Li, an international student from Drexel University. I come from China. My major is entertainment and art management, and digital media concentration. I finished my co-op last year and my task was basically managing official accounts on social media for a company, which helps students to apply for top universities.</p>
-      <p>Currently, I am planning to apply for graduate schools in economics. Because I found that it is an interesting topic for me, and it also has a good future. My area is combining digital media and economics. As a digital native, I believe that these two things are playing significant roles in our world.</p>
+    <div>
+      <p>About Me</p>
+    </div>
+    <div>
       <p>I am a big fan of video games. I enjoy playing games and communicating with other players. My favourite game is Dark Soul.</p>
       <p>I love playing piano. I started to practice piano since I was 10. When I was in high school, I created a band with my friends. After that, I turned to play popular music, including some basic composition and piano accompaniment.</p>
+    </div>
   </main>
   <aside>
-    <a href="">
-      <img src="img/aside_sample_1.png" alt="aside_nav_1">
-    </a>
-    <a href="">
-      <img src="img/aside_sample_2.png" alt="aside_nav_2">
-    </a>
-    <a href="">
-      <img src="img/aside_sample_3.png" alt="aside_nav_3">
-    </a>
+    <div>
+      <a href="">
+        <img src="img/aside_sample_1.png" alt="aside_nav_1">
+      </a>
+    </div>
+    <div>
+      <a href="">
+        <img src="img/aside_sample_2.png" alt="aside_nav_2">
+      </a>
+    </div>
+    <div>
+      <a href="">
+       <img src="img/aside_sample_3.png" alt="aside_nav_3">
+      </a>
+    </div>
   </aside>
   <footer>
     <p>&copy; Jiaji's website 2019</p>
