--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
 <body>
   <header>
     <div id="logo">
-      <img src="img/logo_sample.png" alt="logo">
+      <a href="index.html"><img src="img/logo_sample.png" alt="logo"></a>
     </div>
     <div id="title">
-        <p>Jiaji's Personal Website</p>
-      </div>
-    <div id="header_background">
-      <img src="" alt="">
+      <p>Jiaji's Personal Website</p>
     </div>
     <div id="nav">
       <div>
@@ -29,16 +26,13 @@
       <div>
         <a href="portfolio.html">Portfolio</a>
       </div>
-        <a href="resume.html">Resume</a>
       <div>
+        <a href="resume.html">Resume</a>
       </div>
     </div>
   </header>
   <main>
     <p>Hello! My name is Jiaji Li, an international student from Drexel University. I come from China. My major is entertainment and art management, and digital media concentration. I finished my co-op last year and my task was basically managing official accounts on social media for a company, which helps students to apply for top universities.</p>
-    <p>Currently, I am planning to apply for graduate schools in economics. Because I found that it is an interesting topic for me, and it also has a good future. My area is combining digital media and economics. As a digital native, I believe that these two things are playing significant roles in our world.</p>
-    <p>I am a big fan of video games. I enjoy playing games and communicating with other players. My favourite game is Dark Soul.</p>
-    <p>I love playing piano. I started to practice piano since I was 10. When I was in high school, I created a band with my friends. After that, I turned to play popular music, including some basic composition and piano accompaniment.</p>
   </main>
   <aside>
     <div>
