Add: stylesheet, contents, and imgs

--- a/about.html
+++ b/about.html
@@ -10,27 +10,33 @@
 </head>
 <body>
   <header>
+    <div id="up"></div>
     <div id="logo">
-      <a href="index.html"><img src="img/logo_sample.png" alt="logo"></a>
+      <a href="index.html"><img src="img/logo.png" alt="logo"></a>
     </div>
-    <div id="title">
-      <p>Jiaji's Personal Website</p>
+    <div id="title_1">
+      <p>Jiaji's</p>
     </div>
-    <div id="nav">
-      <div>
-        <a href="about.html">About</a>
-      </div>
-      <div>
-        <a href="contact.html">Contact</a>
-      </div>
-      <div>
-        <a href="portfolio.html">Portfolio</a>
-      </div>
-      <div>
-        <a href="resume.html">Resume</a>
-      </div>
+    <div id="title_2">
+      <p>Personal Website</p>
     </div>
   </header>
+  <div id="nav">
+    <div>
+      <a href="about.html">About</a>
+    </div>
+    <div>
+      <a href="contact.html">Contact</a>
+    </div>
+    <div>
+      <a href="portfolio.html">Portfolio</a>
+    </div>
+    <div>
+      <a href="resume.html">Resume</a>
+    </div>
+  </div>
+  <div id="line">
+  </div>
   <main>
     <div>
       <p>About Me</p>
@@ -38,25 +44,22 @@
     <div>
       <p>I am a big fan of video games. I enjoy playing games and communicating with other players. My favourite game is Dark Soul.</p>
       <p>I love playing piano. I started to practice piano since I was 10. When I was in high school, I created a band with my friends. After that, I turned to play popular music, including some basic composition and piano accompaniment.</p>
-    </div>
+    </div>    
   </main>
-  <aside>
+  <div id="aside">
     <div>
-      <a href="">
-        <img src="img/aside_sample_1.png" alt="aside_nav_1">
+      <a href="#up">
+        <img src="img/aside_up.png" alt="up_button">
       </a>
     </div>
     <div>
-      <a href="">
-        <img src="img/aside_sample_2.png" alt="aside_nav_2">
+      <a href="index.html">
+        <img src="img/aside_home.png" alt="homepage_button">
       </a>
     </div>
-    <div>
-      <a href="">
-       <img src="img/aside_sample_3.png" alt="aside_nav_3">
-      </a>
-    </div>
-  </aside>
+  </div>
+  <div id="line">
+  </div>
   <footer>
     <p>&copy; Jiaji's website 2019</p>
   </footer>
