--- a/index.html
+++ b/index.html
@@ -10,47 +10,50 @@
 </head>
 <body>
   <header>
+    <div id="up"></div>
     <div id="logo">
-      <a href="index.html"><img src="img/logo_sample.png" alt="logo"></a>
+      <a href="index.html"><img src="img/logo.png" alt="logo"></a>
     </div>
-    <div id="title">
-      <p>Jiaji's Personal Website</p>
+    <div id="title_1">
+      <p>Jiaji's</p>
     </div>
-    <div id="nav">
-      <div>
-        <a href="about.html">About</a>
-      </div>
-      <div>
-        <a href="contact.html">Contact</a>
-      </div>
-      <div>
-        <a href="portfolio.html">Portfolio</a>
-      </div>
-      <div>
-        <a href="resume.html">Resume</a>
-      </div>
+    <div id="title_2">
+      <p>Personal Website</p>
     </div>
   </header>
+  <div id="nav">
+    <div>
+      <a href="about.html">About</a>
+    </div>
+    <div>
+      <a href="contact.html">Contact</a>
+    </div>
+    <div>
+      <a href="portfolio.html">Portfolio</a>
+    </div>
+    <div>
+      <a href="resume.html">Resume</a>
+    </div>
+  </div>
+  <div id="line">
+  </div>
   <main>
-    <p>Hello! My name is Jiaji Li, an international student from Drexel University. I come from China. My major is entertainment and art management, and digital media concentration. I finished my co-op last year and my task was basically managing official accounts on social media for a company, which helps students to apply for top universities.</p>
+    <p>Hello! My name is Jiaji Li, an international student from Drexel University. I come from China. My major is entertainment and art management, and digital media concentration. </p>
   </main>
-  <aside>
+  <div id="aside">
     <div>
-      <a href="">
-        <img src="img/aside_sample_1.png" alt="aside_nav_1">
+      <a href="#up">
+        <img src="img/aside_up.png" alt="up_button">
       </a>
     </div>
     <div>
-      <a href="">
-        <img src="img/aside_sample_2.png" alt="aside_nav_2">
+      <a href="index.html">
+        <img src="img/aside_home.png" alt="homepage_button">
       </a>
     </div>
-    <div>
-      <a href="">
-       <img src="img/aside_sample_3.png" alt="aside_nav_3">
-      </a>
-    </div>
-  </aside>
+  </div>
+  <div id="line">
+  </div>
   <footer>
     <p>&copy; Jiaji's website 2019</p>
   </footer>
