--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head>
 <body>
   <header>
-    <div id="up"></div>
-    <div id="logo">
-      <a href="index.html"><img src="img/logo.png" alt="logo"></a>
-    </div>
-    <div id="title_1">
-      <p>Jiaji's</p>
-    </div>
-    <div id="title_2">
-      <p>Personal Website</p>
+    <div>
+      <div id="logo">
+        <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+      </div>
+      <div id="title_1">
+        <p>Jiaji's</p>
+      </div>
+      <div id="title_2">
+        <p>Personal Website</p>
+      </div>
     </div>
   </header>
   <div id="nav">
@@ -29,30 +30,20 @@
       <a href="contact.html">Contact</a>
     </div>
     <div>
-      <a href="portfolio.html">Portfolio</a>
-    </div>
-    <div>
       <a href="resume.html">Resume</a>
     </div>
   </div>
-  <div id="line">
   </div>
   <main>
-    <p>Hello! My name is Jiaji Li, an international student from Drexel University. I come from China. My major is entertainment and art management, and digital media concentration. </p>
+    <div class="main_body">
+      <div>
+        <p>Hello! My name is Jiaji Li, an international student from Drexel University. I come from China. My major is entertainment and art management, and digital media concentration. </p>
+      </div>
+      <div id="rainbow">
+        <img src="img/index_pic.jpg" alt="rainbow">
+      </div>
+    </div>
   </main>
-  <div id="aside">
-    <div>
-      <a href="#up">
-        <img src="img/aside_up.png" alt="up_button">
-      </a>
-    </div>
-    <div>
-      <a href="index.html">
-        <img src="img/aside_home.png" alt="homepage_button">
-      </a>
-    </div>
-  </div>
-  <div id="line">
   </div>
   <footer>
     <p>&copy; Jiaji's website 2019</p>
