Update: overall html structure

--- a/about.html
+++ b/about.html
@@ -1,51 +1,54 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Jiaji's Personal Website</title>
-  <link rel="stylesheet" href="css/stylesheet.css">
-  <style>
-    @import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
-  </style>
+    <meta charset="UTF-8">
+    <title>Jiaji's Personal Website</title>
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
+    </style>
 </head>
+
 <body>
-  <header>
-    <div id="logo">
-      <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+    <div class="header">
+        <div id="logo">
+            <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+        </div>
+        <div id="title_1">
+            <p>Jiaji's</p>
+        </div>
+        <div id="title_2">
+            <p>Personal Website</p>
+        </div>
     </div>
-    <div id="title_1">
-      <p>Jiaji's</p>
+    <div class="nav">
+        <div>
+            <a href="about.html">About</a>
+        </div>
+        <hr>
+        <div>
+            <a href="contact.html">Contact</a>
+        </div>
+        <hr>
+        <div>
+            <a href="resume.html">Resume</a>
+        </div>
     </div>
-    <div id="title_2">
-      <p>Personal Website</p>
+    <div class="main">
+        <div>
+            <div>
+                <p>I am a big fan of video games. I enjoy playing games and communicating with other players. My favourite game is Dark Soul.</p>
+            </div>
+            <div>
+                <p>I love playing piano. I started to practice piano since I was 10. When I was in high school, I created a band with my friends. After that, I turned to play popular music, including some basic composition and piano accompaniment.</p>
+            </div>
+        </div>
     </div>
-  </header>
-  <div id="nav">
-    <div>
-      <a href="about.html">About</a>
+    <div class="footer">
+        <div>
+            <p>&copy; Jiaji's website 2019</p>
+        </div>
     </div>
-    <div>
-      <a href="contact.html">Contact</a>
-    </div>
-    <div>
-      <a href="resume.html">Resume</a>
-    </div>
-  </div>
-  <div id="line">
-  </div>
-  <main>
-    <div>
-      <p>About Me</p>
-    </div>
-    <div>
-      <p>I am a big fan of video games. I enjoy playing games and communicating with other players. My favourite game is Dark Soul.</p>
-      <p>I love playing piano. I started to practice piano since I was 10. When I was in high school, I created a band with my friends. After that, I turned to play popular music, including some basic composition and piano accompaniment.</p>
-    </div>    
-  </main>
-  <div id="line">
-  </div>
-  <footer>
-    <p>&copy; Jiaji's website 2019</p>
-  </footer>
 </body>
-</html>
