--- a/contact.html
+++ b/contact.html
@@ -1,52 +1,59 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Jiaji's Personal Website</title>
-  <link rel="stylesheet" href="css/stylesheet.css">
-  <style>
-    @import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
-  </style>
+    <meta charset="UTF-8">
+    <title>Jiaji's Personal Website</title>
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
+    </style>
 </head>
+
 <body>
-  <header>
-    <div id="logo">
-      <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+    <div class="header">
+        <div id="logo">
+            <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+        </div>
+        <div id="title_1">
+            <p>Jiaji's</p>
+        </div>
+        <div id="title_2">
+            <p>Personal Website</p>
+        </div>
     </div>
-    <div id="title_1">
-      <p>Jiaji's</p>
+    <div class="nav">
+        <div>
+            <a href="about.html">About</a>
+        </div>
+        <hr>
+        <div>
+            <a href="contact.html">Contact</a>
+        </div>
+        <hr>
+        <div>
+            <a href="resume.html">Resume</a>
+        </div>
     </div>
-    <div id="title_2">
-      <p>Personal Website</p>
+    <div class="main">
+        <div>
+            <div>
+                <div>
+                    <p>Contact Info</p>
+                </div>
+                <div>
+                    <ul>
+                        <li>Email: jl3623@drexel.edu</li>
+                        <li>Phone: 215-385-6215</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
-  </header>
-  <hr>
-  <div id="nav">
-    <div>
-      <a href="about.html">About</a>
+    <div class="footer">
+        <div>
+            <p>&copy; Jiaji's website 2019</p>
+        </div>
     </div>
-    <div>
-      <a href="contact.html">Contact</a>
-    </div>
-    <div>
-      <a href="resume.html">Resume</a>
-    </div>
-  </div>
-  <hr>
-  <main>
-    <div>
-      <p>Contact Info</p>
-    </div>
-    <div>
-      <ul>
-        <li>Email: jl3623@drexel.edu</li>
-        <li>Phone: 215-385-6215</li>
-      </ul>
-    </div>
-  </main>
-  <hr>
-  <footer>
-    <p>&copy; Jiaji's website 2019</p>
-  </footer>
 </body>
-</html>
