--- a/index.html
+++ b/index.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Jiaji's Personal Website</title>
-  <link rel="stylesheet" href="css/stylesheet.css">
-  <style>
-    @import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
-  </style>
+    <meta charset="UTF-8">
+    <title>Jiaji's Personal Website</title>
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
+    </style>
 </head>
+
 <body>
-  <header>
-    <div>
-      <div id="logo">
-        <a href="index.html"><img src="img/logo.png" alt="logo"></a>
-      </div>
-      <div id="title_1">
-        <p>Jiaji's</p>
-      </div>
-      <div id="title_2">
-        <p>Personal Website</p>
-      </div>
+    <div class="header">
+        <div id="logo">
+            <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+        </div>
+        <div id="title_1">
+            <p>Jiaji's</p>
+        </div>
+        <div id="title_2">
+            <p>Personal Website</p>
+        </div>
     </div>
-  </header>
-  <div id="nav">
-    <div>
-      <a href="about.html">About</a>
+    <div class="nav">
+        <div>
+            <a href="about.html">About</a>
+        </div>
+        <hr>
+        <div>
+            <a href="contact.html">Contact</a>
+        </div>
+        <hr>
+        <div>
+            <a href="resume.html">Resume</a>
+        </div>
     </div>
-    <div>
-      <a href="contact.html">Contact</a>
+    <div class="main">
+        <div>
+            <div>
+                <p>Hello! My name is Jiaji Li, an international student from Drexel University. I come from China. My major is entertainment and art management, and digital media concentration. </p>
+            </div>
+            <div id="rainbow">
+                <img src="img/index_pic.jpg" alt="rainbow">
+            </div>
+        </div>
     </div>
-    <div>
-      <a href="resume.html">Resume</a>
+    <div class="footer">
+        <div>
+            <p>&copy; Jiaji's website 2019</p>
+        </div>
     </div>
-  </div>
-  </div>
-  <main>
-    <div class="main_body">
-      <div>
-        <p>Hello! My name is Jiaji Li, an international student from Drexel University. I come from China. My major is entertainment and art management, and digital media concentration. </p>
-      </div>
-      <div id="rainbow">
-        <img src="img/index_pic.jpg" alt="rainbow">
-      </div>
-    </div>
-  </main>
-  </div>
-  <footer>
-    <p>&copy; Jiaji's website 2019</p>
-  </footer>
 </body>
-</html>
