--- a/resume.html
+++ b/resume.html
@@ -1,121 +1,125 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Jiaji's Personal Website</title>
-  <link rel="stylesheet" href="css/stylesheet.css">
-  <style>
-    @import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
-  </style>
+    <meta charset="UTF-8">
+    <title>Jiaji's Personal Website</title>
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
+    </style>
 </head>
+
 <body>
-  <header>
-    <div id="logo">
-      <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+    <div class="header">
+        <div id="logo">
+            <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+        </div>
+        <div id="title_1">
+            <p>Jiaji's</p>
+        </div>
+        <div id="title_2">
+            <p>Personal Website</p>
+        </div>
     </div>
-    <div id="title_1">
-      <p>Jiaji's</p>
+    <div class="nav">
+        <div>
+            <a href="about.html">About</a>
+        </div>
+        <hr>
+        <div>
+            <a href="contact.html">Contact</a>
+        </div>
+        <hr>
+        <div>
+            <a href="resume.html">Resume</a>
+        </div>
     </div>
-    <div id="title_2">
-      <p>Personal Website</p>
+    <div class="main">
+        <div>
+            <div id="name">
+                <p>Jiaji Li</p>
+            </div>
+            <div>
+                <ul>
+                    <li>3516 Spring Garden Street</li>
+                    <li>Philadelphia, PA 19104</li>
+                    <li>215-385-6215</li>
+                    <li>jl3623@drexel.edu</li>
+                </ul>
+            </div>
+            <div>
+                <p>Education</p>
+                <ul>
+                    <li>Drexel University, Philadelphia, PA </li>
+                    <li>Bachelor of Science in Entertainment & Art Management, Anticipated Graduation June 2020 </li>
+                    <li>Digital Media Concentration </li>
+                </ul>
+            </div>
+            <div>
+                <p>Award</p>
+                    <ul>
+                        <li>Certificate of Merit in Career Management & Professional Development, Drexel University, 2017</li>
+                    </ul>
+            </div>
+            <div>
+                <p>Relevant Coursework</p>
+                    <ul>
+                        <li>Overview of Digital Media</li>
+                        <li>Web Development </li>
+                        <li>Digital Design Tool</li>
+                        <li>Business Law</li>
+                        <li>Economics</li>
+                        <li>Electronic Publishing</li>
+                    </ul>
+            </div>
+            <div>
+                <p>Skills</p>
+                    <ul>
+                        <li>Adobe Illustrator</li>
+                        <li>Adobe Photoshop</li>
+                        <li>Paint Tool SAI</li>
+                    </ul>
+            </div>
+            <div>
+                <p>Relevant Experience</p>
+                    <ul>
+                        <li>Drexel Communication Bridge Program, International Student Assistant, September 2015 - June 2016
+                            <ul>
+                                <li>Participated in many multiple cultures communication activities</li>
+                                <li>Motivated international students to connect to the new community</li>
+                                <li>Provided a platform of cultural communication for local members</li>
+                            </ul>
+                        </li>
+                        <li>Drexel Chinese Student & Scholar Association, Entertainment Department Assistant, September 2015 - September 2016
+                            <ul>
+                                <li>Participated activities in Entertainment Department</li>
+                                <li>Devoted to hold Spring Festival Party and other activities</li>
+                                <li>Facilitated communication with Chinese students community</li>
+                            </ul>
+                        </li>
+                        <li>The magazine project called Spectrum in design course, Producer, October 2016 - December 2016
+                            <ul>
+                                <li>Designed a digital magazine by using Adobe InDesign</li>
+                                <li>Utilized software skills such as Adobe Photoshop and Illustrator</li>
+                                <li>Created an ideal effect as a sample for class</li>
+                            </ul>
+                        </li>
+                    </ul>
+            </div>
+            <div>
+                <p>Activities</p>
+                    <ul>
+                        <li>Hobbies: piano, basic music composition, Chinese character handwriting, anime style drawing</li>
+                        <li>Other activities: Taught piano for children, designed a logo for a E-sport team</li>
+                    </ul>
+            </div>
+        </div>
     </div>
-  </header>
-  <div id="nav">
-    <div>
-      <a href="about.html">About</a>
+    <div class="footer">
+        <div>
+            <p>&copy; Jiaji's website 2019</p>
+        </div>
     </div>
-    <div>
-      <a href="contact.html">Contact</a>
-    </div>
-    <div>
-      <a href="resume.html">Resume</a>
-    </div>
-  </div>
-  <div id="line">
-  </div>
-  <main>
-    <div id="name">
-      <p>Jiaji Li</p>
-    </div>
-    <div>
-      <ul>
-        <li>3516 Spring Garden Street</li>
-        <li>Philadelphia, PA 19104</li>
-        <li>215-385-6215</li>
-        <li>jl3623@drexel.edu</li>
-      </ul>
-    </div>
-    <div>
-      <p>Education</p>
-      <ul>
-        <li>Drexel University, Philadelphia, PA </li>
-        <li>Bachelor of Science in Entertainment & Art Management, Anticipated Graduation June 2020 </li>
-        <li>Digital Media Concentration </li>
-      </ul>
-    </div>
-    <div>
-      <p>Award</p>
-      <ul>
-        <li>Certificate of Merit in Career Management & Professional Development, Drexel University, 2017</li>
-      </ul>
-    </div>
-    <div>
-      <p>Relevant Coursework</p>
-      <ul>
-        <li>Overview of Digital Media</li>
-        <li>Web Development </li>
-        <li>Digital Design Tool</li>
-        <li>Business Law</li>
-        <li>Economics</li>
-        <li>Electronic Publishing</li>
-      </ul>
-    </div>
-    <div>
-      <p>Skills</p>
-      <ul>
-        <li>Adobe Illustrator</li>
-        <li>Adobe Photoshop</li>
-        <li>Paint Tool SAI</li>
-      </ul>
-    </div>
-    <div>
-      <p>Relevant Experience</p>
-      <ul>
-        <li>Drexel Communication Bridge Program, International Student Assistant, September 2015 - June 2016
-          <ul>
-            <li>Participated in many multiple cultures communication activities</li>
-            <li>Motivated international students to connect to the new community</li>
-            <li>Provided a platform of cultural communication for local members</li>
-          </ul>
-        </li>
-        <li>Drexel Chinese Student & Scholar Association, Entertainment Department Assistant, September 2015 - September 2016
-          <ul>
-            <li>Participated activities in Entertainment Department</li>
-            <li>Devoted to hold Spring Festival Party and other activities</li>
-            <li>Facilitated communication with Chinese students community</li>
-          </ul>
-        </li>
-        <li>The magazine project called Spectrum in design course, Producer, October 2016 - December 2016
-          <ul>
-            <li>Designed a digital magazine by using Adobe InDesign</li>
-            <li>Utilized software skills such as Adobe Photoshop and Illustrator</li>
-            <li>Created an ideal effect as a sample for class</li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-    <div>
-      <p>Activities</p>
-      <ul>
-        <li>Hobbies: piano, basic music composition, Chinese character handwriting, anime style drawing</li>
-        <li>Other activities: Taught piano for children, designed a logo for a E-sport team</li>
-      </ul>
-    </div>
-  </main>
-  <div id="line">
-  </div>
-  <footer>
-    <p>&copy; Jiaji's website 2019</p>
-  </footer>
 </body>
-</html>
