--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Jiaji's Personal Website</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/stylesheet.css">
     <style>
         @import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
@@ -25,15 +26,19 @@
     </div>
     <div class="nav">
         <div>
-            <a href="about.html">About</a>
-        </div>
-        <hr>
-        <div>
-            <a href="contact.html">Contact</a>
-        </div>
-        <hr>
-        <div>
-            <a href="resume.html">Resume</a>
+            <ul>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <hr>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+                <hr>
+                <li>
+                    <a href="resume.html">Resume</a>
+                </li>
+            </ul>
         </div>
     </div>
     <div class="main">
