Update: add contents to about me

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div>
                 <p>Hello! My name is Jiaji Li, an international student from Drexel University. I come from China. My major is entertainment and art management, and digital media concentration. </p>
             </div>
-            <div id="rainbow">
+            <div class="pic">
                 <img src="img/index_pic.jpg" alt="rainbow">
             </div>
         </div>
