--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Jiaji's Personal Website</title>
+    <title>Resume</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/stylesheet.css">
     <style>
         @import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
