--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Jiaji's Personal Website</title>
+    <title>About Me</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/stylesheet.css">
     <style>
         @import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
@@ -41,10 +42,35 @@
     <div class="main">
         <div>
             <div>
-                <p>I am a big fan of video games. I enjoy playing games and communicating with other players. My favourite game is Dark Soul.</p>
+                <p>Hello! My name is Jiaji! I come from China and I am a collage student. For now, I am living in Philly. And it is my fifth year living in American.</p>
+            </div>
+            <div class="pic">
+                <img src="img/cat.gif" alt="cat">
             </div>
             <div>
+                <p>Currently, I am studying in Drexel University. My major is entertainment and art management and digital media concentration.</p>
+            </div>
+            <div class="pic">
+                <img src="img/philly.jpg" alt="philly">
+            </div>
+            <div>
+                <p>I am a big fan of video games. I enjoy playing games and communicating with other players. My favourite game is Dark Soul and Overwatch.</p>
+            </div>
+                <video
+                    controls>
+                        <source src="media/ow.mp4" type="video/mp4" />
+                        <source src="media/ow.webm" type="video/webm" />
+                        <source src="media/ow.ogv" type="video/ogg" />
+                </video>
+            <div>
                 <p>I love playing piano. I started to practice piano since I was 10. When I was in high school, I created a band with my friends. After that, I turned to play popular music, including some basic composition and piano accompaniment.</p>
+            </div>
+            <div class="pic">
+                <img src="img/piano.jpg" alt="piano">
+            </div>
+            <div>
+                <p>Also, I love playing Japanese Mahjong, and I wrote a blog about how to improve your skills.</p>
+                <p>Here is my link: http://jiajili.home.blog</p>
             </div>
         </div>
     </div>
