Update: contact me

--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,9 @@
                     </ul>
                 </div>
             </div>
+            <div class="pic">
+                <img src="img/contact.gif" alt="contact_me_gif">
+            </div>
         </div>
     </div>
     <div class="footer">
